Propagate changes to other mode pages

--- a/data/master.html
+++ b/data/master.html
@@ -7,7 +7,8 @@
 
   <title>Master</title>
   <script type="text/javascript" src="scripts/jquery-3.6.0.min.js"></script>
-  <script type="text/javascript" src="scripts/mode-settings.js" defer></script>
+  <script type="text/javascript" src="scripts/common.js"></script>
+  <script type="text/javascript" src="scripts/mode.js" defer></script>
   <link rel="stylesheet" type="text/css" href="css/site_global.css" />
   <link rel="stylesheet" type="text/css" href="css/mode.css" id="pagesheet" />
 </head>
@@ -23,7 +24,7 @@
 
       <div class="colelem value_heading">
         SPEED ( CURRENT:
-        <div class="value_current" id="mode_speed_current">??</div>
+        <div class="value_current" id="mode_speed_current">--</div>
         km/h )
       </div>
       <div class="colelem value_row">
@@ -32,14 +33,14 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1" id="mode_speed" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="mode_speed" onInput="validateAll()">
           </p>
         </div>
       </div>
 
       <div class="colelem value_heading">
         END TURNING POINT ( CURRENT:
-        <div class="value_current" id="mode_turn1_current">??</div>
+        <div class="value_current" id="mode_turn1_current">--</div>
         m )
       </div>
       <div class="colelem value_row">
@@ -48,14 +49,14 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1" id="mode_turn1" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="mode_turn1" onInput="validateAll()">
           </p>
         </div>
       </div>
 
       <div class="colelem value_heading">
         NEAR TURNING POINT ( CURRENT:
-        <div class="value_current" id="mode_turn2_current">??</div>
+        <div class="value_current" id="mode_turn2_current">--</div>
         m )
       </div>
       <div class="colelem value_row">
@@ -64,14 +65,14 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1" id="mode_turn2" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="mode_turn2" onInput="validateAll()">
           </p>
         </div>
       </div>
 
       <div class="colelem value_heading">
         BRAKE TIME ( CURRENT:
-        <div class="value_current" id="mode_brake_time_current">??</div>
+        <div class="value_current" id="mode_brake_time_current">--</div>
         s )
       </div>
       <div class="colelem value_row">
@@ -80,14 +81,14 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1" id="mode_brake_time" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="mode_brake_time" onInput="validateAll()">
           </p>
         </div>
       </div>
 
       <div class="colelem value_heading">
         ACCELERATION ( CURRENT:
-        <div class="value_current" id="mode_acc_current">??</div>
+        <div class="value_current" id="mode_acc_current">--</div>
         m/s<sup>2</sup> )
       </div>
       <div class="colelem value_row">
@@ -96,14 +97,14 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1" id="mode_acc" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="mode_acc" onInput="validateAll()">
           </p>
         </div>
       </div>
 
       <div class="colelem value_heading">
         DECELERATION ( CURRENT:
-        <div class="value_current" id="mode_dec_current">??</div>
+        <div class="value_current" id="mode_dec_current">--</div>
         m/s<sup>2</sup> )
       </div>
       <div class="colelem value_row">
@@ -112,13 +113,13 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1 " id="mode_dec" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="mode_dec" onInput="validateAll()">
           </p>
         </div>
       </div>
 
       <div class="colelem" style="padding-top: 14px;">
-        <a href="javascript:set_mode_values()" class="save_button width_full" id="set_button">SET</a>
+        <a href="javascript:uploadModeValues()" class="save_button width_full" id="set_button">SET</a>
       </div>
 
       <a class="nonblock nontext clip_frame colelem" id="u1231" href="program-selector.html"><img class="svg" id="u1227"
